fixed the squished look when there is a user added restaurant in the burger show view

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -80,7 +80,9 @@ a:hover{
 .details_container{
   border: 1px solid white;
   border-radius: 5px;
-  margin: 10px;
+  margin: 0px;
+  width: 100%;
+  height: 500px;
   display: inline-flex;
   flex-direction: row;
   align-items: stretch;
@@ -101,7 +103,6 @@ a:hover{
   align-items: center;
   flex-grow: 1;
   flex-basis: 0;
-
   justify-content: space-around;
 }
 
@@ -110,7 +111,7 @@ a:hover{
   margin: auto;
   display: flex;
   flex-direction: row;
-  align-items: flex-start; 
+  align-items: center; 
   justify-content: space-between;
   flex-grow: 1;
   flex-basis: 0;
@@ -155,7 +156,7 @@ body{
 }
 
 .front{
-  margin-top: 50px;
+  margin-top: 110px;
   display: flex;
   flex-direction: row;
   justify-content: center;
